@@ -1,5 +1,6 @@
 0.3.1+ (in development)
 ------------------------------------------------------------------------
+- Feature: [#13000] objective_options command for console
 
 0.3.1 (2020-09-27)
 ------------------------------------------------------------------------
